Fix prevent section order collapse on empty content

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1687,6 +1687,9 @@ body.search-open {
   .front-page .content {
     padding: 0 0 60px;
   }
+  .front-page .empty-section {
+    width: 25%;
+  }
   .public .front-page .voog-reference.empty-parent {
     padding: 0 20px 5px 0;
   }
@@ -1716,6 +1719,9 @@ body.search-open {
     -moz-flex: 1 1 auto;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+  }
+  .front-page .empty-section {
+    display: none;
   }
   .front-page .header {
     position: absolute;
