--- a/stylesheets/scss/_content.scss
+++ b/stylesheets/scss/_content.scss
@@ -203,6 +203,10 @@
       padding: 0 0 60px;
     }
 
+    .empty-section {
+      width: 25%;
+    }
+
     .voog-reference {
 
       .public & {
@@ -241,6 +245,10 @@
     .content {
       @include flexbox;
       @include flex(1 1 auto);
+    }
+
+    .empty-section {
+      display: none;
     }
 
     .header {
